# pm_dev

./: .gitignore  params.yaml  pmds_Grup F - feature ready.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: pmds_Grup F-checkpoint.ipynb
notebook/: model ready.ipynb
output/model/train/: model.pkl
src/: data_collection.py  data_spliting.py  feature_engineering.py  main.py  params.py  predict.py  schema.py  training.py
