[tool.poetry]
name = "pmds"
version = "0.1.0"
description = ""
authors = ["zainal umari <zainalumari@pusri.co.id>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
