[tool.poetry]
name = "pmds"
version = "0.1.0"
description = ""
authors = ["zainal umari <zainalumari@pusri.co.id>"]

[tool.poetry.dependencies]
python = ">=3.7.2, <3.11"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pandas = "1.3.5"
numpy = "1.21.6"
scikit-learn = "0.24.2"
pyxlsb = "^1.0.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
